--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 		Kayak Fishing Valencia - los de Valencia
-		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="../cdn2.editmysite.com/css/sites49c4.css?buildTime=1765574134" />
-<link rel="stylesheet" type="text/css" href="../cdn2.editmysite.com/css/old/fancybox3324.css?1765574134" />
-<link rel="stylesheet" type="text/css" href="../cdn2.editmysite.com/css/social-icons5c7b.css?buildtime=1765574134" media="screen,projection" />
+		<link id="wsite-base-style" rel="stylesheet" type="text/css" href=".https://cdn2.editmysite.com/css/sites49c4.css?buildTime=1765574134" />
+<link rel="stylesheet" type="text/css" href=".https://cdn2.editmysite.com/css/old/fancybox3324.css?1765574134" />
+<link rel="stylesheet" type="text/css" href=".https://cdn2.editmysite.com/css/social-icons5c7b.css?buildtime=1765574134" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="files/main_style4fd9.css?1765663185" title="wsite-theme-css" />
-<link href='../cdn2.editmysite.com/fonts/Poppins/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Poppins/fontc81e.css?2' rel='stylesheet' type='text/css' />
 
-<link href='../cdn2.editmysite.com/fonts/Raleway/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Open_Sans/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Capture_it/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Montserrat/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Roboto/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Merriweather/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Luckiest_Guy/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
-<link href='../cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Raleway/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Open_Sans/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Capture_it/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Montserrat/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Roboto/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Merriweather/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Luckiest_Guy/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
+<link href='.https://cdn2.editmysite.com/fonts/Komika_Axis/fontc81e.css?2' rel='stylesheet' type='text/css' />
 <style type='text/css'>
 .wsite-elements.wsite-not-footer:not(.wsite-header-elements) div.paragraph, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) p, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-block .product-title, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .product-description, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, .wsite-elements.wsite-not-footer:not(.wsite-header-elements) .wsite-form-field label, #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {font-family:"Raleway" !important;}
 #wsite-content div.paragraph, #wsite-content p, #wsite-content .product-block .product-title, #wsite-content .product-description, #wsite-content .wsite-form-field label, #wsite-content .wsite-form-field label, .blog-sidebar div.paragraph, .blog-sidebar p, .blog-sidebar .wsite-form-field label, .blog-sidebar .wsite-form-field label {color:#3f3f3f !important;}
@@ -98,10 +98,10 @@ var STATIC_BASE = 'http://cdn1.editmysite.com/';
 var ASSETS_BASE = 'http://cdn2.editmysite.com/';
 var STYLE_PREFIX = 'wsite';
 </script>
-<script src='../cdn2.editmysite.com/js/jquery-1.8.3.min.js'></script>
+<script src='.https://cdn2.editmysite.com/js/jquery-1.8.3.min.js'></script>
 
-<script type="text/javascript" src="../cdn2.editmysite.com/js/lang/es_ES/stl4b6a.js?buildTime=1765574134&amp;"></script>
-<script src="../cdn2.editmysite.com/js/site/main49c4.js?buildTime=1765574134"></script><script type="text/javascript">
+<script type="text/javascript" src=".https://cdn2.editmysite.com/js/lang/es_ES/stl4b6a.js?buildTime=1765574134&amp;"></script>
+<script src=".https://cdn2.editmysite.com/js/site/main49c4.js?buildTime=1765574134"></script><script type="text/javascript">
 		function initCustomerAccountsModels() {
 					(function(){_W.setup_rpc({"url":"\/ajax\/api\/JsonRPC\/CustomerAccounts\/","actions":{"CustomerAccounts":[{"name":"login","len":2,"multiple":false,"standalone":false},{"name":"logout","len":0,"multiple":false,"standalone":false},{"name":"getSessionDetails","len":0,"multiple":false,"standalone":false},{"name":"getAccountDetails","len":0,"multiple":false,"standalone":false},{"name":"getOrders","len":0,"multiple":false,"standalone":false},{"name":"register","len":4,"multiple":false,"standalone":false},{"name":"emailExists","len":1,"multiple":false,"standalone":false},{"name":"passwordReset","len":1,"multiple":false,"standalone":false},{"name":"passwordUpdate","len":3,"multiple":false,"standalone":false},{"name":"validateSession","len":1,"multiple":false,"standalone":false}]},"namespace":"_W.CustomerAccounts.RPC"});
 _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":"_W.CustomerAccounts.BackboneModelData","collection_namespace":"_W.CustomerAccounts.BackboneCollectionData","bootstrap_namespace":"_W.CustomerAccounts.BackboneBootstrap","models":{"CustomerAccounts":{"_class":"CustomerAccounts.Model.CustomerAccounts","defaults":null,"validation":null,"types":null,"idAttribute":null,"keydefs":null}},"collections":{"CustomerAccounts":{"_class":"CustomerAccounts.Collection.CustomerAccounts"}},"bootstrap":[]});
@@ -124,7 +124,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			_W.storeEuPrivacyPolicyUrl = "";
 			com_currentSite = "143061044719707058";
 			com_userID = "97052244";</script><script type="text/javascript">_W.resellerSite = true;</script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
-<script type="text/javascript" src="../cdn2.editmysite.com/js/lang/es_ES/stl4b6a.js?buildTime=1765574134&amp;"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "../www.google.com/recaptcha/api.js"; </script><script type="text/javascript"><!--
+<script type="text/javascript" src=".https://cdn2.editmysite.com/js/lang/es_ES/stl4b6a.js?buildTime=1765574134&amp;"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "../www.google.com/recaptcha/api.js"; </script><script type="text/javascript"><!--
 	
 	
 	function initFlyouts(){
@@ -2670,7 +2670,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
   <script src="files/theme/jquery.loadTemplate.min4afc.js?1620177250"></script>
   <script src="files/theme/custom4afc.js?1620177250"></script>
     <div id="customer-accounts-app"></div>
-    <script src="../cdn2.editmysite.com/js/site/main-customer-accounts-site49c4.js?buildTime=1765574134"></script>
+    <script src=".https://cdn2.editmysite.com/js/site/main-customer-accounts-site49c4.js?buildTime=1765574134"></script>
 
 		los de Valencia - pesca en kayak ¡EUREKA!<script type="text/javascript">
 	var _gaq = _gaq || [];
